@@ -1,3 +1,9 @@
+2002-11-12  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 03422] Re: setting form on loading
+	* form.c (loadPreForm): initialize name
+			check textarea, name for /textarea
+
 2002-11-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 03418] Re: tab browser
@@ -4589,4 +4595,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.505 2002/11/12 12:46:53 ukai Exp $
+$Id: ChangeLog,v 1.506 2002/11/12 13:06:14 ukai Exp $
